--- a/features/home/presentation/src/main/res/menu/menu_bottom_nav.xml
+++ b/features/home/presentation/src/main/res/menu/menu_bottom_nav.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/headlinesFragment"
         android:title="@string/title_nav_headlines"
+        android:contentDescription="blat"
         android:icon="@drawable/ic_baseline_view_list_24"/>
 
     <item
